chore: upgrade refined architect
Mdg is on the gradle plugin portal.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+refinedarchitectVersion=0.16.7
 refinedstorageVersion=2.0.0-milestone.4.4
 # https://linkie.shedaniel.dev/dependencies?loader=neoforge&version=1.21
 # https://linkie.shedaniel.dev/dependencies?loader=fabric&version=1.21
