feat: autocrafting transfer support

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-refinedarchitectVersion=0.17.1
-refinedstorageVersion=2.0.0-milestone.4.7
+refinedarchitectVersion=0.19.1
+refinedstorageVersion=2.0.0-milestone.4.8
 # https://linkie.shedaniel.dev/dependencies?loader=neoforge&version=1.21
 # https://linkie.shedaniel.dev/dependencies?loader=fabric&version=1.21
 architecturyVersion=13.0.3
@@ -7,3 +7,7 @@ clothConfigVersion=15.0.127
 reiVersion=16.0.729
 # Gradle
 org.gradle.jvmargs=-Xmx1G
+org.gradle.configureondemand=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
